librespeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: librespeed
  name: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      volumes:
        - name: www-html
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
      containers:
        - image: adolfintel/speedtest
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
              add: ['CHOWN', 'SETGID', 'SETUID', 'DAC_OVERRIDE']
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            #runAsUser: 33
            #runAsGroup: 33
          volumeMounts:
            - mountPath: "/var/www/html"
              name: www-html
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          name: librespeed
