librespeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: infrastructure
spec:
  selector:
    app: librespeed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
